<resources>
    <string name="app_name">MVVMKotlinApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_alarm_setting">Alarm setting</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_fetch_data">Fetch Setting Data</string>
    <string name="menu_review_order">Review Order</string>
    <string name="menu_uncapture_outlet">Un capture outlet</string>

    <string name="menu_outlet">Outlet</string>
    <string name="menu_new_lead">New Lead</string>
    <string name="menu_take_order">Take Order</string>
    <string name="menu_offer_details">Offer Detail</string>

    <string name="menu_apply_offer">Apply Offer</string>
    <string name="menu_confirm">Confirm</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_prod_offer_details">Offer Detail</string>

    <string name="register">Register User</string>
    <string name="msg_token_fmt">530164018092</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="contact_name">User Name</string>
    <string name="enter_a_mobile_number">Mobile number</string>
    <string name="street_address_po_box_etc">Address</string>
    <string name="apartment_suite_unit_etc">Email ID</string>
    <string name="state_province">Password</string>
    <string name="city">City</string>
    <string name="fg_notitifcation_title_stopping">Start duty off</string>
    <string name="fg_notitifcation_title_starting">Start duty on</string>

    <string name="backup_title">DB Exported Under Skygge Folder!</string>
    <string name="backup_message">Would you like send backup via email?</string>

    <string name="fetchdata_title"></string>
    <string name="fetchdata_message">Are you sure,do you want to fetch settings data?</string>

    <string name="fetchlatestdata_title">Attention</string>
    <string name="fetchlatestdata_message">This activity will fetch all latest data from server.Are you sure want to proceed?</string>

    <string name="syncdata_title"></string>
    <string name="syncdata_message">Are you sure you want to sync data?</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="removeproduct_message">Are you sure you want remove this from order?</string>

    <string name="confirm_order_title">Confirm order</string>
    <string name="confirm_order_message">Are you sure want to confirm order?</string>


    <string name="route">Enter Route</string>
    <string name="outlet">Search outlet from list</string>
    <string name="dist">Enter distributor</string>

    <string name="shortdelivery_title">Alert</string>
    <string name="shortdelivery_message">Please input correct delivered quantity against the respective product and then click on confirm shortclose.</string>


    <string-array name="countries_array">
        <item>India</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_firebase_chat">Firebase Chat</string>

    <string name="map_api_key">AIzaSyDMRvxB8uQsV6_1FQAXPHEteSrxi91bQlU</string>  // Change it with your google map api key.

    <string name="need_location">Enable GPS SERVICE</string>
    <string name="location_content">This app wants to change your device settings use GPS,Wi-Fi and cell networks for your location</string>
    <string name="online_driver">Online</string>


</resources>
